# NimbusAudit

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
scripts/: update-ssh-ip.sh
src/nimbusaudit/: aws.py  cli.py  config.py  models.py
src/nimbusaudit/checks/: ebs.py  ec2.py  s3.py  security_groups.py
tests/: test_aws_api.py  test_cli.py  test_config.py  test_ebs.py  test_ec2.py  test_menu.py  test_s3.py  test_security_groups.py
