[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "nimbusaudit"
version = "0.1.0"
description = "A read-only cloud security auditing CLI."
requires-python = ">=3.11"

dependencies = [
    "boto3",
    "botocore[crt]",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
]